# backed_data

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  index.html  mutex_queue  test
.github/workflows/: all-tests.yml  cargo-tag.yml  clippy.yml  code-coverage.yml  feature-builds.yml  miri.yml  msrv.yml  pages.yml  test.yml
benches/: io_bench.rs  io_bench_util.rs  zstd_bench.rs
coverage/: index.html
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/aead/: all.html  index.html  struct.Error.html  struct.OsRng.html  struct.Payload.html  trait.Aead.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.AeadMut.html  trait.AeadMutInPlace.html  trait.Buffer.html  trait.KeyInit.html  trait.KeySizeUser.html  type.Key.html  type.Nonce.html  type.Result.html  type.Tag.html
docs/aes/: all.html  index.html  struct.Aes128.html  struct.Aes128Dec.html  struct.Aes128Enc.html  struct.Aes192.html  struct.Aes192Dec.html  struct.Aes192Enc.html  struct.Aes256.html  struct.Aes256Dec.html  struct.Aes256Enc.html  type.Block.html  type.Block8.html
docs/aes_gcm/: all.html  constant.A_MAX.html  constant.C_MAX.html  constant.P_MAX.html  index.html  struct.AesGcm.html  struct.Error.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.KeyInit.html  trait.KeySizeUser.html  trait.TagSize.html  type.Aes128Gcm.html  type.Aes256Gcm.html  type.Key.html  type.Nonce.html  type.Tag.html
docs/ahash/: all.html  index.html  struct.AHasher.html
docs/allocator_api2/: all.html  index.html  macro.vec.html  trait.SliceExt.html
docs/async_bincode/: all.html  index.html  sidebar-items.js  struct.AsyncDestination.html  struct.SyncDestination.html
docs/async_channel/: all.html  enum.TryRecvError.html  enum.TrySendError.html  fn.bounded.html  fn.unbounded.html  index.html  struct.Receiver.html  struct.Recv.html  struct.RecvError.html  struct.Send.html  struct.SendError.html  struct.Sender.html  struct.WeakReceiver.html  struct.WeakSender.html
docs/async_compression/: all.html  enum.Level.html  index.html  sidebar-items.js
docs/async_executor/: all.html  index.html  struct.Executor.html  struct.LocalExecutor.html
docs/async_fs/: all.html  fn.canonicalize.html  fn.copy.html  fn.create_dir.html  fn.create_dir_all.html  fn.hard_link.html  fn.metadata.html  fn.read.html  fn.read_dir.html  fn.read_link.html  fn.read_to_string.html  fn.remove_dir.html  fn.remove_dir_all.html  fn.remove_file.html  fn.rename.html  fn.set_permissions.html  fn.symlink_metadata.html  fn.write.html  index.html  struct.DirBuilder.html  struct.DirEntry.html  struct.File.html  struct.OpenOptions.html  struct.ReadDir.html
docs/async_io/: all.html  fn.block_on.html  index.html  struct.Async.html  struct.Readable.html  struct.ReadableOwned.html  struct.Timer.html  struct.Writable.html  struct.WritableOwned.html  trait.IoSafe.html
docs/async_lock/: all.html  index.html  struct.Barrier.html  struct.BarrierWaitResult.html  struct.Mutex.html  struct.MutexGuard.html  struct.MutexGuardArc.html  struct.OnceCell.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockReadGuardArc.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockUpgradableReadGuardArc.html  struct.RwLockWriteGuard.html  struct.RwLockWriteGuardArc.html  struct.Semaphore.html  struct.SemaphoreGuard.html  struct.SemaphoreGuardArc.html
docs/async_net/: all.html  fn.resolve.html  index.html  struct.Incoming.html  struct.TcpListener.html  struct.TcpStream.html  struct.UdpSocket.html  trait.AsyncToSocketAddrs.html
docs/async_process/: all.html  fn.driver.html  index.html  struct.Child.html  struct.ChildStderr.html  struct.ChildStdin.html  struct.ChildStdout.html  struct.Command.html
docs/async_scoped/: all.html  index.html  struct.Scope.html  type.TokioScope.html
docs/async_signal/: all.html  enum.Signal.html  index.html  struct.Signals.html
docs/async_task/: all.html  fn.spawn.html  fn.spawn_local.html  fn.spawn_unchecked.html  index.html  struct.Builder.html  struct.FallibleTask.html  struct.Runnable.html  struct.ScheduleInfo.html  struct.Task.html  struct.WithInfo.html  trait.Schedule.html
docs/atomic_waker/: all.html  index.html  struct.AtomicWaker.html
docs/backed_data/: all.html  index.html  macro.cursor_vec.html  sidebar-items.js
docs/base64/: all.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
docs/bincode/: all.html  enum.ErrorKind.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.options.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  struct.Serializer.html  type.Error.html  type.Result.html
docs/bitflags/: all.html  index.html  macro.bitflags.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
docs/blocking/: all.html  fn.unblock.html  index.html  struct.Unblock.html
docs/byteorder/: all.html  enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
docs/bytes/: all.html  index.html  struct.Bytes.html  struct.BytesMut.html
docs/cfg_if/: all.html  index.html  macro.cfg_if.html
docs/cipher/: all.html  index.html  macro.impl_simple_block_encdec.html  struct.InvalidLength.html  struct.OverflowError.html  struct.StreamCipherCoreWrapper.html  struct.StreamCipherError.html  trait.AlgorithmName.html  trait.ArrayLength.html  type.Block.html  (+28 more)
examples/: async_mmap.rs  async_simd.rs  large_reencode.rs  mmap.rs  remote_loading.rs  remote_simd.rs  shakespeare_secret.rs
media/: Cargo.toml
src/: array.rs  backed_array.rs  backed_entry.rs  directory.rs  entry.rs  lib.rs  meta.rs  test_utils.rs  utils.rs  zstd.rs
test_data/: iou_zipcodes_2020_stub.csv
(+40321 files in other folders)
